--- a/Nexus-Retail-ERP/Nexus-Retail-ERP.csproj
+++ b/Nexus-Retail-ERP/Nexus-Retail-ERP.csproj
@@ -11,6 +11,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Data.SqlClient" Version="6.1.3" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
 		<PackageReference Include="System.Configuration.ConfigurationManager" Version="10.0.1" />
 	</ItemGroup>
 
