Update connection string in App.config

--- a/Nexus-Retail-ERP/App.config
+++ b/Nexus-Retail-ERP/App.config
@@ -2,7 +2,7 @@
 <configuration>
 	<connectionStrings>
 		<add name="NexusDB"
-             connectionString="Data Source=CHRONOS;Initial Catalog=NexusERP;User ID=sa;Password=SHYMOM;TrustServerCertificate=True"
+             connectionString="Put_Your_ConnectionString"
              providerName="Microsoft.Data.SqlClient" />
 	</connectionStrings>
 </configuration>
